[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loggio"
dynamic = ["version"]
description = "Comprehensive logging utility with colored output, user context tracking, and automatic truncation."
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Xavier Collantes", email = "collantes.xavier@gmail.com"}
]
maintainers = [
    {name = "Xavier Collantes", email = "collantes.xavier@gmail.com"}
]
keywords = ["logging", "logger", "colored", "enhanced", "debugging", "terminal", "user context", "automatic truncation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Environment :: Console",
]

[tool.hatch.version]
path = "loggio/__init__.py"

[project.urls]
Homepage = "https://github.com/xcollantes/loggio"
Repository = "https://github.com/xcollantes/loggio"
Issues = "https://github.com/xcollantes/loggio/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["loggio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true
